--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,7 @@
 services:
   - type: web
     name: WikiParez
-    runtime: dotnet
-    buildCommand: dotnet publish -c Release -o out
-    startCommand: dotnet out/WikiParez.dll
+    dockerfilePath: ./Dockerfile
     envVars:
       - key: ASPNETCORE_ENVIRONMENT
         value: Production
